--- a/styles/home.css
+++ b/styles/home.css
@@ -1,16 +1,6 @@
 /*MOBILE FIRST*/
 
-h1#home {
-  position: relative;
-  z-index: 1;
-  line-height: 50px;
-  top: 12px;
-}
-
-h1.z-toggle {
-  z-index: 0 !important;
-}
-
+/*HEADER STYLES */
 #header-image {
   max-width: 100%;
   max-height: auto;
@@ -18,20 +8,10 @@ h1.z-toggle {
   z-index: 0;
 }
 
-button#rsvp {
-  display: block;
-  margin: 1em auto;
-  background: #914dd0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 5px;
-  border: none;
-  height: auto;
-  padding: 1em 1.5em;
-}
+/* MAIN BODY STYLES */
 
-button#rsvp:hover {
-  cursor: pointer;
-  transform: scale(1.1);
+button#rsvp {
+  margin: 1em auto;
 }
 
 button#rsvp a {
@@ -44,7 +24,7 @@ button#rsvp a {
 
 div#info-wrapper {
   display: flex;
-  padding: 1em;
+  /* padding: 1em; */
   margin: 0 auto;
   width: 90vw;
 }
@@ -75,7 +55,7 @@ div#info-wrapper p {
 div#countdown {
   border-radius: 5px;
   padding: 2rem;
-  background-color: #9fa6ea;
+  background-color: #b1a3ff;
   color: #fdf9e6;
   text-align: center;
   line-height: 1.5;
@@ -84,6 +64,10 @@ div#countdown {
 
 div#countdown h2 {
   font-size: 1.5rem;
+}
+
+main {
+  padding: 0; /*So the countdown goes the full width of the mobile screen */
 }
 
 @media screen and (max-width: 360px) {
@@ -97,10 +81,6 @@ div#countdown h2 {
   }
 }
 @media screen and (min-width: 720px) {
-  header h1 {
-    text-align: center;
-  }
-
   #header-image {
     display: block;
     margin: 0 auto;
