--- a/styles/home.css
+++ b/styles/home.css
@@ -48,10 +48,9 @@ div#info-wrapper p {
 }
 
 div#countdown {
+  background: #e7e6fc;
   border-radius: 2px;
   padding: 1rem;
-  background-color: #8f9fb0;
-  color: #fdf9e6;
   text-align: center;
   line-height: 1.5;
   margin-bottom: 10px;
@@ -63,6 +62,11 @@ div#countdown h2 {
 
 main {
   padding: 0;
+}
+
+#weather-wrapper {
+  background: #8f9fb0;
+  color: #fdf9e6;
 }
 
 @media screen and (max-width: 360px) {
