Fix form validation; add object to simulate guest data being sent to a server

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -112,6 +112,14 @@ p#error {
   font-size: 1em;
 }
 
+p#error i {
+  margin-right: 2px;
+}
+
+.missing {
+  border: 1px solid red;
+}
+
 #thanks {
   text-align: center;
   margin: 2em;
