add await keyword

--- a/styles/main.css
+++ b/styles/main.css
@@ -259,7 +259,7 @@ footer p {
   .nav-links {
     display: block;
     text-align: center;
-    position: relative;
+    position: static;
   }
 
   nav {
